tests/requests/valid/rfc9112_target_absolute_userinfo_01.http
GET http://user:pass@example.com:8080/foo?q=1 HTTP/1.1\r\n
Host: example.com:8080\r\n
\r\n
