tests/requests/invalid/version_02.http
GET /foo HTTP/2.0\r\n
\r\n
